--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -58,6 +58,21 @@
         width: 100%;
     }
 }
+.m-page-transportation_bn{
+    background-image: url("../images/bgLefttransportation.jpg");
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 70%;
+    min-height: 330px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    img{
+        width: 100%;
+    }
+}
+
+
 .m-page-left_bg{
     position: absolute;
     top:0;
