--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -63,6 +63,18 @@
             width: 100%;
         }
     }
+    .m-page-transportation_bn{
+        background-image: url("../images/bgLefttransportation.jpg");
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        max-height: 330px;
+        overflow: hidden;
+        img{
+            width: 100%;
+        }
+    }
     .m-page_wrapper{
         padding: 2% 5%;
     }
