--- a/css/swiper.css
+++ b/css/swiper.css
@@ -20,6 +20,9 @@
   z-index: 1;
   margin-bottom: 100px;
 }
+.swiper-container.ogz{
+  margin-bottom: 20px;
+}
 .swiper-container-no-flexbox .swiper-slide {
   float: left;
 }
