--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -21,6 +21,7 @@
     overflow: hidden;
 }
 .calen-pic{
+    background-image: url("../images/noimages.jpg");
     position: relative;
     width: 100%;
     background-size: cover;
