--- a/css/main.css
+++ b/css/main.css
@@ -2888,6 +2888,7 @@ html {
 
 .calen-pic {
   background-image: url("../images/noimages.jpg");
+  min-height: 159px;
   position: relative;
   width: 100%;
   background-size: cover;
