--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -22,6 +22,7 @@
 }
 .calen-pic{
     background-image: url("../images/noimages.jpg");
+    min-height:159px;
     position: relative;
     width: 100%;
     background-size: cover;
