--- a/sass/twtcnangangcss/_touch_calendar.scss
+++ b/sass/twtcnangangcss/_touch_calendar.scss
@@ -3,14 +3,14 @@
 
 }
 @include respond-compact {
-.calen-pic{
-    height: 130px;
-}
+    .calen-pic{
+    min-height: 130px;
+    }
 
 }
 @include respond-pad {
     .calen-pic{
-        height: 90px;
+        min-height: 70px;
     }
     .ticket_price{
         grid-template-columns: 1fr 1fr 1fr;
@@ -22,7 +22,7 @@
 }
 @include respond-mobile {
     .calen-pic{
-        height: 123px;
+        min-height: 123px;
     }
     .calen-list{
         grid-template-columns: 1fr 1fr;
