--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -21,9 +21,8 @@
     overflow: hidden;
 }
 .calen-pic{
-    background-image: url("../images/noimages.jpg");
-    min-height: 179px;
-    margin-top: 0px;
+    background-image: url("../images/noimages.svg");
+    padding-bottom: 52%;
     text-align: center;
     position: relative;
     background-color: #cccccc;
