--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -21,7 +21,7 @@
     overflow: hidden;
 }
 .calen-pic{
-    background-image: url("../images/noimages.svg");
+    background-image: url("../images/noimage.svg");
     padding-bottom: 52%;
     text-align: center;
     position: relative;
