--- a/css/main.css
+++ b/css/main.css
@@ -2887,7 +2887,7 @@ html {
 }
 
 .calen-pic {
-  background-image: url("../images/noimages.svg");
+  background-image: url("../images/noimage.svg");
   padding-bottom: 52%;
   text-align: center;
   position: relative;
