--- a/css/main.css
+++ b/css/main.css
@@ -2887,8 +2887,9 @@ html {
 }
 
 .calen-pic {
-  background-image: url("../images/noimage.svg");
-  padding-bottom: 52%;
+  background-image: url("../images/noimages.jpg");
+  min-height: 179px;
+  margin-top: 0px;
   text-align: center;
   position: relative;
   background-color: #cccccc;
@@ -2901,6 +2902,41 @@ html {
   transform: scale(1.3);
 }
 .calen-pic img {
+  width: 100%;
+}
+
+.image_nopic {
+  background-image: url("../images/noimage.svg");
+  width: 100px;
+  height: 130px;
+  margin: 0 auto;
+  margin-top: 20px;
+  background-size: cover;
+}
+
+.image_nopic_havepic {
+  background-image: url("../images/eventa08.jpg");
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-size: cover;
+}
+
+.ext_calen_noimage {
+  height: 179px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  background-color: #cccccc;
+  width: 100%;
+  background-size: contain;
+  cursor: pointer;
+  transition: all 0.6s;
+}
+.ext_calen_noimage:hover {
+  transform: scale(1.3);
+}
+.ext_calen_noimage img {
   width: 100%;
 }
 
