--- a/css/main.css
+++ b/css/main.css
@@ -2906,12 +2906,12 @@ html {
 }
 
 .image_nopic {
-  background-image: url("../images/noimage.svg");
-  width: 100px;
-  height: 130px;
+  background-image: url("../images/noimages.jpg");
+  width: 100%;
+  height: 180px;
   margin: 0 auto;
-  margin-top: 20px;
   background-size: cover;
+  background-position: center;
 }
 
 .image_nopic_havepic {
