--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -39,12 +39,13 @@
     }
 }
 .image_nopic{
-    background-image: url("../images/noimage.svg");
-    width: 100px;
-    height: 130px;
+    background-image: url("../images/noimages.jpg");
+    width: 100%;
+    height: 180px;
     margin: 0 auto;
-    margin-top: 20px;
+    // margin-top: 20px;
     background-size: cover;
+    background-position: center;
 }
 .image_nopic_havepic{
     background-image: url("../images/eventa08.jpg");
