--- a/css/main.css
+++ b/css/main.css
@@ -1634,7 +1634,7 @@ html {
 }
 .card-Parallax {
   width: 100%;
-  height: 342px;
+  min-height: 342px;
   position: relative;
 }
 
@@ -1645,9 +1645,8 @@ html {
   width: 75%;
   max-height: 450px;
   background-size: cover;
-  background-image: url("../images/bgLeft.jpg");
+  background-image: url("../images/organizers/organizers.jpg");
   height: 330px;
-  background-position: 131px -18px;
   background-repeat: no-repeat;
 }
 .m-page-headerbg img {
@@ -1669,7 +1668,7 @@ html {
 }
 
 .m-page-event_bn {
-  background-image: url("../images/bgLeft_event.jpg");
+  background-image: url("../images/calendar/calendar.jpg");
   position: absolute;
   top: 0;
   right: 0;
@@ -1683,7 +1682,7 @@ html {
 }
 
 .m-page-visitors_bn {
-  background-image: url("../images/bgLeftvisitors.jpg");
+  background-image: url("../images/visitors/visitors.jpg");
   position: absolute;
   top: 0;
   right: 0;
@@ -1697,7 +1696,7 @@ html {
 }
 
 .m-page-transportation_bn {
-  background-image: url("../images/bgLefttransportation.jpg");
+  background-image: url("../images/transportation/transportation.jpg");
   position: absolute;
   top: 0;
   right: 0;
@@ -2370,12 +2369,28 @@ html {
 }
 
 @media only screen and (max-width: 1239px) {
-  .m-page-left_bg {
-    width: 50%;
+  .m-page-news_bn {
+    background-image: url("../images/news/bgnews_wn.jpg");
+  }
+
+  .m-page-visitors_bn {
+    background-image: url("../images/visitors/visitors_wn.jpg");
+  }
+
+  .m-page-transportation_bn {
+    background-image: url("../images/transportation/transportation_wn.jpg");
+  }
+
+  .m-page-event_bn {
+    background-image: url("../images/calendar/calendar_wn.jpg");
   }
 
   .m-page-headerbg {
-    background-position: 159px 0;
+    background-image: url("../images/organizers/organizers_wn.jpg");
+  }
+
+  .m-page-left_bg {
+    width: 50%;
   }
 
   .Vendor-resource_wrapper {
@@ -2398,55 +2413,29 @@ html {
   }
 }
 @media only screen and (max-width: 1096px) {
-  .m-page-event_bn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    max-height: 330px;
-    overflow: hidden;
-  }
-  .m-page-event_bn img {
-    width: 100%;
-  }
-
   .m-page-news_bn {
-    background-image: url("../images/bgnews.jpg");
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    max-height: 330px;
-    overflow: hidden;
-  }
-  .m-page-news_bn img {
-    width: 100%;
+    width: 70%;
+    background-image: url("../images/news/bgnews_p.jpg");
   }
 
   .m-page-visitors_bn {
-    background-image: url("../images/bgLeftvisitors.jpg");
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    max-height: 330px;
-    overflow: hidden;
-  }
-  .m-page-visitors_bn img {
-    width: 100%;
+    width: 70%;
+    background-image: url("../images/visitors/visitors_p.jpg");
   }
 
   .m-page-transportation_bn {
-    background-image: url("../images/bgLefttransportation.jpg");
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    max-height: 330px;
-    overflow: hidden;
+    width: 70%;
+    background-image: url("../images/transportation/transportation_p.jpg");
   }
-  .m-page-transportation_bn img {
-    width: 100%;
+
+  .m-page-event_bn {
+    width: 70%;
+    background-image: url("../images/calendar/calendar_p.jpg");
+  }
+
+  .m-page-headerbg {
+    width: 70%;
+    background-image: url("../images/organizers/organizers_p.jpg");
   }
 
   .m-page_wrapper {
@@ -2471,11 +2460,6 @@ html {
 
   .bok_rp {
     padding: 7%;
-  }
-
-  .m-page-headerbg {
-    background-position: 0 0;
-    width: 100%;
   }
 
   .m-page-left_bg {
@@ -2508,6 +2492,31 @@ html {
   }
 }
 @media only screen and (max-width: 768px) {
+  .m-page-news_bn {
+    width: 100%;
+    background-image: url("../images/news/bgnews_mn.jpg");
+  }
+
+  .m-page-visitors_bn {
+    width: 100%;
+    background-image: url("../images/visitors/visitors_mn.jpg");
+  }
+
+  .m-page-transportation_bn {
+    width: 100%;
+    background-image: url("../images/transportation/transportation_mn.jpg");
+  }
+
+  .m-page-event_bn {
+    width: 100%;
+    background-image: url("../images/calendar/calendar_mn.jpg");
+  }
+
+  .m-page-headerbg {
+    width: 100%;
+    background-image: url("../images/organizers/organizers_mn.jpg");
+  }
+
   .bok-pic {
     width: 50%;
     height: 300px;
@@ -2597,6 +2606,31 @@ html {
   }
 }
 @media only screen and (max-width: 480px) {
+  .m-page-news_bn {
+    width: 100%;
+    background-image: url("../images/news/bgnews_m.jpg");
+  }
+
+  .m-page-visitors_bn {
+    width: 100%;
+    background-image: url("../images/visitors/visitors_m.jpg");
+  }
+
+  .m-page-transportation_bn {
+    width: 100%;
+    background-image: url("../images/transportation/transportation_m.jpg");
+  }
+
+  .m-page-event_bn {
+    width: 100%;
+    background-image: url("../images/calendar/calendar_m.jpg");
+  }
+
+  .m-page-headerbg {
+    width: 100%;
+    background-image: url("../images/organizers/organizers_m.jpg");
+  }
+
   .bok_title {
     font-size: 1.8em;
   }
@@ -2610,11 +2644,6 @@ html {
 
   .Vendor_box {
     grid-template-columns: 1fr 1fr;
-  }
-
-  .m-page-headerbg {
-    background-position: -220px 0;
-    width: 100%;
   }
 
   .card-Parallax {
