--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -19,7 +19,7 @@
 
 }
 .m-page-news_bn{
-    background-image: url("../images/bgnews.jpg");
+    background-image: url("../images/news/bgnews.jpg");
     position: absolute;
     top: 0;
     right: 0;
