--- a/css/main.css
+++ b/css/main.css
@@ -1654,7 +1654,7 @@ html {
 }
 
 .m-page-news_bn {
-  background-image: url("../images/bgnews.jpg");
+  background-image: url("../images/news/bgnews.jpg");
   position: absolute;
   top: 0;
   right: 0;
