--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -71,7 +71,7 @@
     }
 }
 .calen-card_issuse{
-    min-height: 240px;
+    // min-height: 240px;
     padding: 20px;
     background-color: #f1f1f1;
 }
