--- a/css/main.css
+++ b/css/main.css
@@ -2913,6 +2913,8 @@ html {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 50px;
+  overflow: hidden;
+  padding: 0;
 }
 
 .calen-card_vrte {
@@ -2978,6 +2980,7 @@ html {
 }
 
 .calen-card_issuse {
+  min-height: 240px;
   padding: 20px;
   background-color: #f1f1f1;
 }
