--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -11,6 +11,8 @@
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 50px;
+    overflow: hidden;
+    padding: 0 ;
 }
 .calen-card_vrte{
     background-color: #f1f1f1;
@@ -71,7 +73,7 @@
     }
 }
 .calen-card_issuse{
-    // min-height: 240px;
+    min-height: 240px;
     padding: 20px;
     background-color: #f1f1f1;
 }
