--- a/css/main.css
+++ b/css/main.css
@@ -2910,11 +2910,12 @@ html {
 }
 
 .calen-card-box {
+  width: 29.333%;
+  margin: 2% 2%;
+  float: left;
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 50px;
-  overflow: hidden;
-  padding: 0;
 }
 
 .calen-card_vrte {
@@ -3135,6 +3136,11 @@ html {
   margin-bottom: 10px;
 }
 
+@media only screen and (max-width: 1239px) {
+  .calen-card_issuse {
+    min-height: 260px;
+  }
+}
 @media only screen and (max-width: 1096px) {
   .ticket_price {
     grid-template-columns: 1fr 1fr 1fr;
@@ -3154,6 +3160,10 @@ html {
   }
 }
 @media only screen and (max-width: 768px) {
+  .calen-card_issuse {
+    min-height: 285px;
+  }
+
   .calen-list {
     grid-template-columns: 1fr 1fr;
   }
