--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -5,14 +5,12 @@
     @include clearfix;
 }
 .calen-card-box{
-    // width: 29.333%;
-    // margin:2% 2%;
-    // float: left;
+    width: 29.333%;
+    margin:2% 2%;
+    float: left;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 50px;
-    overflow: hidden;
-    padding: 0 ;
 }
 .calen-card_vrte{
     background-color: #f1f1f1;
