calen-card_issuse

--- a/sass/twtcnangangcss/_touch_calendar.scss
+++ b/sass/twtcnangangcss/_touch_calendar.scss
@@ -9,7 +9,9 @@
     }
 }
 @include respond-pad {
-
+    .calen-card_issuse{
+        min-height: 300px;
+    }
 
     .ticket_price{
         grid-template-columns: 1fr 1fr 1fr;
