--- a/css/main.css
+++ b/css/main.css
@@ -3138,10 +3138,14 @@ html {
 
 @media only screen and (max-width: 1239px) {
   .calen-card_issuse {
-    min-height: 300px;
+    min-height: 260px;
   }
 }
 @media only screen and (max-width: 1096px) {
+  .calen-card_issuse {
+    min-height: 270px;
+  }
+
   .ticket_price {
     grid-template-columns: 1fr 1fr 1fr;
   }
