--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -108,6 +108,10 @@
 
 }
 @include respond-mobile {
+    .clod_pic{
+        width: 95%;
+        margin-bottom: 30px;
+    }
     .m-page-news_bn{
         width: 100%;
         background-image: url("../images/news/bgnews_mn.jpg");
