--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -112,6 +112,9 @@
         width: 95%;
         margin-bottom: 30px;
     }
+    .vendor_icon{
+        width: 100%;
+    }
     .m-page-news_bn{
         width: 100%;
         background-image: url("../images/news/bgnews_mn.jpg");
