--- a/css/main.css
+++ b/css/main.css
@@ -2509,6 +2509,10 @@ html {
     margin-bottom: 30px;
   }
 
+  .vendor_icon {
+    width: 100%;
+  }
+
   .m-page-news_bn {
     width: 100%;
     background-image: url("../images/news/bgnews_mn.jpg");
