--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -105,7 +105,10 @@
             top: 47px;
         }
     }
-
+    .clod_pic {
+        width: 48%;
+        margin: 0 12px;
+    }
 }
 @include respond-mobile {
 
