--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -39,6 +39,10 @@
         margin-top:0px;
 
     }
+    .clod_pic {
+        width: 48%;
+        margin: 0 12px;
+    }
 }
 @include respond-pad {
     .m-page-news_bn{
