--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -375,8 +375,8 @@
 }
 .clod_pic{
     float: left;
-    width: 48%;
-    margin: 0 9px;
+    width: 46%;
+    margin: 0 1%;
 
     img{
         width: 100%;
