--- a/css/main.css
+++ b/css/main.css
@@ -2627,6 +2627,10 @@ html {
   }
 }
 @media only screen and (max-width: 480px) {
+  .ven_font {
+    font-size: 1.3em;
+  }
+
   .clod_pic {
     width: 95%;
     margin-bottom: 30px;
