--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -210,6 +210,9 @@
 
 }
 @include respond-small-mobile{
+    .ven_font {
+        font-size: 1.3em;
+    }
     .clod_pic{
         width: 95%;
         margin-bottom: 30px;
