--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -538,11 +538,11 @@
 .stepblue{
     width: 22%;
     float: left;
-    margin-right: 20px;
+    margin: 0 1%;
     padding: 20px;
     border-radius: 10px;
     background-color: #e5eef1;
-    min-height:194px;
+    min-height:200px;
 
 }
 .stepblue_deep{
