--- a/css/swiper.css
+++ b/css/swiper.css
@@ -122,18 +122,15 @@
 .swiper-button-prev,
 .swiper-button-next {
   position: absolute;
-  top: 60%;
-  width: 55px;
-  height: 100px;
-  margin-top: -50px;
+  top: 50%;
+  width: 27px;
+  height: 44px;
+  margin-top: -22px;
   z-index: 10;
   cursor: pointer;
-  -moz-background-size: 30%;
-  -webkit-background-size: 30%;
-  background-size: 30%;
+  background-size: 27px 44px;
   background-position: center;
   background-repeat: no-repeat;
-  background-color:#00a0e9;
 }
 .swiper-button-prev{
 	border-radius: 0px 15px 15px 0px;
@@ -155,10 +152,8 @@
 }
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
-  /*background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23007aff'%2F%3E%3C%2Fsvg%3E");*/
-  background-color: #863faf;
-  /*background-image: url(../images/banner_menu_L.png);*/
-  left: 0px;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23007aff'%2F%3E%3C%2Fsvg%3E");
+  left: 10px;
   right: auto;
 }
 .swiper-button-prev.swiper-button-black,
