motifly fontweight minwidth

--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -184,6 +184,7 @@
     font-weight: bolder;
     span{
         display: inline-block;
+        min-width: 80px;
 
         &.secd{
             color:#999999;
