--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -12,12 +12,16 @@
     .m-page-transportation_bn{
         background-image: url("../images/transportation/transportation_wn.jpg");
     }
+    .m-page-faq_bn{
+        background-image: url("../images/transportation/faq_wn.jpg");
+    }
     .m-page-event_bn{
         background-image: url("../images/calendar/calendar_wn.jpg");
     }
     .m-page-headerbg{
         background-image: url("../images/organizers/organizers_wn.jpg");
     }
+
     .m-page-left_bg{
         width: 50%;
     }
@@ -52,6 +56,10 @@
     .m-page-transportation_bn{
         width: 70%;
         background-image: url("../images/transportation/transportation_p.jpg");
+    }
+    .m-page-faq_bn{
+        width: 70%;
+        background-image: url("../images/transportation/faq_p.jpg");
     }
     .m-page-event_bn{
         width: 70%;
@@ -122,6 +130,10 @@
     .m-page-transportation_bn{
         width: 100%;
         background-image: url("../images/transportation/transportation_mn.jpg");
+    }
+    .m-page-transportation_bn{
+        width: 100%;
+        background-image: url("../images/transportation/faq_mn.jpg");
     }
     .m-page-event_bn{
         width: 100%;
@@ -233,6 +245,11 @@
         width: 100%;
         background-image: url("../images/transportation/transportation_m.jpg");
     }
+    .m-page-faq_bn{
+        width: 100%;
+        background-image: url("../images/transportation/faq_m.jpg");
+    }
+
     .m-page-event_bn{
         width: 100%;
         background-image: url("../images/calendar/calendar_m.jpg");
