--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -13,7 +13,7 @@
         background-image: url("../images/transportation/transportation_wn.jpg");
     }
     .m-page-faq_bn{
-        background-image: url("../images/transportation/faq_wn.jpg");
+        background-image: url("../images/faq/faq_wn.jpg");
     }
     .m-page-event_bn{
         background-image: url("../images/calendar/calendar_wn.jpg");
@@ -59,7 +59,7 @@
     }
     .m-page-faq_bn{
         width: 70%;
-        background-image: url("../images/transportation/faq_p.jpg");
+        background-image: url("../images/faq/faq_p.jpg");
     }
     .m-page-event_bn{
         width: 70%;
@@ -133,7 +133,7 @@
     }
     .m-page-transportation_bn{
         width: 100%;
-        background-image: url("../images/transportation/faq_mn.jpg");
+        background-image: url("../images/faq/faq_mn.jpg");
     }
     .m-page-event_bn{
         width: 100%;
@@ -247,7 +247,7 @@
     }
     .m-page-faq_bn{
         width: 100%;
-        background-image: url("../images/transportation/faq_m.jpg");
+        background-image: url("../images/faq/faq_m.jpg");
     }
 
     .m-page-event_bn{
