--- a/css/main.css
+++ b/css/main.css
@@ -2417,7 +2417,7 @@ html {
   }
 
   .m-page-faq_bn {
-    background-image: url("../images/transportation/faq_wn.jpg");
+    background-image: url("../images/faq/faq_wn.jpg");
   }
 
   .m-page-event_bn {
@@ -2469,7 +2469,7 @@ html {
 
   .m-page-faq_bn {
     width: 70%;
-    background-image: url("../images/transportation/faq_p.jpg");
+    background-image: url("../images/faq/faq_p.jpg");
   }
 
   .m-page-event_bn {
@@ -2557,7 +2557,7 @@ html {
 
   .m-page-transportation_bn {
     width: 100%;
-    background-image: url("../images/transportation/faq_mn.jpg");
+    background-image: url("../images/faq/faq_mn.jpg");
   }
 
   .m-page-event_bn {
@@ -2695,7 +2695,7 @@ html {
 
   .m-page-faq_bn {
     width: 100%;
-    background-image: url("../images/transportation/faq_m.jpg");
+    background-image: url("../images/faq/faq_m.jpg");
   }
 
   .m-page-event_bn {
