--- a/css/main.css
+++ b/css/main.css
@@ -1722,7 +1722,7 @@ html {
 }
 
 .m-page-faq_bn {
-  background-image: url("../images/transportation/faq.jpg");
+  background-image: url("../images/faq/faq.jpg");
   position: absolute;
   top: 0;
   right: 0;
