--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -70,7 +70,7 @@
     }
 }
 .m-page-faq_bn{
-    background-image: url("../images/transportation/faq.jpg");
+    background-image: url("../images/faq/faq.jpg");
     position: absolute;
     top: 0;
     right: 0;
