--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -18,6 +18,9 @@
     .m-page-event_bn{
         background-image: url("../images/calendar/calendar_wn.jpg");
     }
+    .m-page-sitemap_bn{
+        background-image: url("../images/sitemap/sitemap_wn.jpg");
+    }
     .m-page-headerbg{
         background-image: url("../images/organizers/organizers_wn.jpg");
     }
@@ -64,6 +67,10 @@
     .m-page-event_bn{
         width: 70%;
         background-image: url("../images/calendar/calendar_p.jpg");
+    }
+    .m-page-sitemap_bn{
+        width: 70%;
+        background-image: url("../images/sitemap/sitemap_p.jpg");
     }
     .m-page-headerbg{
         width: 70%;
@@ -137,6 +144,10 @@
     .m-page-event_bn{
         width: 100%;
         background-image: url("../images/calendar/calendar_mn.jpg");
+    }
+    .m-page-sitemap_bn{
+        width: 100%;
+        background-image: url("../images/sitemap/sitemap_mn.jpg");
     }
     .m-page-headerbg{
         width:100%;
@@ -252,6 +263,10 @@
     .m-page-event_bn{
         width: 100%;
         background-image: url("../images/calendar/calendar_m.jpg");
+    }
+    .m-page-sitemap_bn{
+        width: 100%;
+        background-image: url("../images/sitemap/sitemap_m.jpg");
     }
     .m-page-headerbg{
         width:100%;
