--- a/css/main.css
+++ b/css/main.css
@@ -1735,6 +1735,20 @@ html {
   width: 100%;
 }
 
+.m-page-sitemap_bn {
+  background-image: url("../images/sitemap/sitemap.jpg");
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 70%;
+  min-height: 330px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.m-page-sitemap_bn img {
+  width: 100%;
+}
+
 .m-page-left_bg {
   position: absolute;
   top: 0;
@@ -2424,6 +2438,10 @@ html {
     background-image: url("../images/calendar/calendar_wn.jpg");
   }
 
+  .m-page-sitemap_bn {
+    background-image: url("../images/sitemap/sitemap_wn.jpg");
+  }
+
   .m-page-headerbg {
     background-image: url("../images/organizers/organizers_wn.jpg");
   }
@@ -2475,6 +2493,11 @@ html {
   .m-page-event_bn {
     width: 70%;
     background-image: url("../images/calendar/calendar_p.jpg");
+  }
+
+  .m-page-sitemap_bn {
+    width: 70%;
+    background-image: url("../images/sitemap/sitemap_p.jpg");
   }
 
   .m-page-headerbg {
@@ -2563,6 +2586,11 @@ html {
   .m-page-event_bn {
     width: 100%;
     background-image: url("../images/calendar/calendar_mn.jpg");
+  }
+
+  .m-page-sitemap_bn {
+    width: 100%;
+    background-image: url("../images/sitemap/sitemap_mn.jpg");
   }
 
   .m-page-headerbg {
@@ -2701,6 +2729,11 @@ html {
   .m-page-event_bn {
     width: 100%;
     background-image: url("../images/calendar/calendar_m.jpg");
+  }
+
+  .m-page-sitemap_bn {
+    width: 100%;
+    background-image: url("../images/sitemap/sitemap_m.jpg");
   }
 
   .m-page-headerbg {
