--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -82,6 +82,20 @@
         width: 100%;
     }
 }
+.m-page-sitemap_bn{
+    background-image: url("../images/sitemap/sitemap.jpg");
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 70%;
+    min-height: 330px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    img{
+        width: 100%;
+    }
+}
+
 
 
 .m-page-left_bg{
