--- a/css/main.css
+++ b/css/main.css
@@ -1736,7 +1736,7 @@ html {
 }
 
 .m-page-sitemap_bn {
-  background-image: url("../images/sitemap/sitemap.jpg");
+  background-image: url("../images/sitmap/sitemap.jpg");
   position: absolute;
   top: 0;
   right: 0;
