--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -83,7 +83,7 @@
     }
 }
 .m-page-sitemap_bn{
-    background-image: url("../images/sitemap/sitemap.jpg");
+    background-image: url("../images/sitmap/sitemap.jpg");
     position: absolute;
     top: 0;
     right: 0;
