--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -263,6 +263,7 @@
     .m-page-event_bn{
         width: 100%;
         background-image: url("../images/calendar/calendar_m.jpg");
+        background-position: center;
     }
     .m-page-sitemap_bn{
         width: 100%;
