--- a/css/main.css
+++ b/css/main.css
@@ -2729,6 +2729,7 @@ html {
   .m-page-event_bn {
     width: 100%;
     background-image: url("../images/calendar/calendar_m.jpg");
+    background-position: center;
   }
 
   .m-page-sitemap_bn {
