--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -250,14 +250,17 @@
     .m-page-visitors_bn{
         width: 100%;
         background-image: url("../images/visitors/visitors_m.jpg");
+        background-position: center;
     }
     .m-page-transportation_bn{
         width: 100%;
         background-image: url("../images/transportation/transportation_m.jpg");
+        background-position: center;
     }
     .m-page-faq_bn{
         width: 100%;
         background-image: url("../images/faq/faq_m.jpg");
+        background-position: center;
     }
 
     .m-page-event_bn{
@@ -268,10 +271,12 @@
     .m-page-sitemap_bn{
         width: 100%;
         background-image: url("../images/sitmap/sitemap_m.jpg");
+        background-position: center;
     }
     .m-page-headerbg{
         width:100%;
         background-image: url("../images/organizers/organizers_m.jpg");
+        background-position: center;
     }
     .bok_title{
         font-size:1.8em;
