--- a/css/main.css
+++ b/css/main.css
@@ -2714,16 +2714,19 @@ html {
   .m-page-visitors_bn {
     width: 100%;
     background-image: url("../images/visitors/visitors_m.jpg");
+    background-position: center;
   }
 
   .m-page-transportation_bn {
     width: 100%;
     background-image: url("../images/transportation/transportation_m.jpg");
+    background-position: center;
   }
 
   .m-page-faq_bn {
     width: 100%;
     background-image: url("../images/faq/faq_m.jpg");
+    background-position: center;
   }
 
   .m-page-event_bn {
@@ -2735,11 +2738,13 @@ html {
   .m-page-sitemap_bn {
     width: 100%;
     background-image: url("../images/sitmap/sitemap_m.jpg");
+    background-position: center;
   }
 
   .m-page-headerbg {
     width: 100%;
     background-image: url("../images/organizers/organizers_m.jpg");
+    background-position: center;
   }
 
   .bok_title {
