--- a/sass/twtcnangangcss/_hall2.scss
+++ b/sass/twtcnangangcss/_hall2.scss
@@ -1,3 +1,11 @@
 .hall2_mar{
     margin-top: 70px;
 }
+.gsc-input-box{
+    width: 140px;
+    float: right;
+}
+.gsc-search-button-v2{
+    border-color: #024190;
+    background-color: #024190;
+}
