--- a/css/main.css
+++ b/css/main.css
@@ -3730,6 +3730,16 @@ html {
   margin-top: 70px;
 }
 
+.gsc-input-box {
+  width: 140px;
+  float: right;
+}
+
+.gsc-search-button-v2 {
+  border-color: #024190;
+  background-color: #024190;
+}
+
 .margin-top {
   margin-top: 30px;
 }
