--- a/css/main.css
+++ b/css/main.css
@@ -4091,6 +4091,7 @@ html {
 .sel_list {
   display: inline-block;
   margin-right: 20px;
+  color: #000;
 }
 .sel_list i {
   color: #ffffff;
@@ -4113,6 +4114,7 @@ html {
 
 .remind {
   color: red;
+  clear: right;
 }
 .remind li {
   margin-bottom: 10px;
@@ -4132,9 +4134,27 @@ html {
   margin-right: 5px;
   zoom: 1.3;
 }
+.rental_toptable.finaltotal {
+  display: none;
+}
+.rental_toptable.finaltotal table {
+  max-width: 500px;
+  float: right;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+.rental_toptable.finaltotal .ffright {
+  padding-right: 20px;
+  text-align: right;
+}
 
 .rentaltop_gray {
   background-color: #ebebeb;
+}
+
+span.event_inp {
+  display: inline-block;
+  margin-right: 20px;
 }
 
 .event_wrap {
@@ -4147,6 +4167,18 @@ html {
   height: 0;
   overflow: hidden;
   visibility: hidden;
+}
+
+.mdi-library-plus {
+  cursor: pointer;
+}
+
+.mdi-delete {
+  cursor: pointer;
+}
+
+.pkitchen {
+  display: none;
 }
 
 .sitemap_wrap {
