--- a/sass/twtcnangangcss/_event.scss
+++ b/sass/twtcnangangcss/_event.scss
@@ -30,6 +30,7 @@
 .sel_list{
     display: inline-block;
     margin-right: 20px;
+    color:#000;
 
     i{
         color: #ffffff;
@@ -52,6 +53,7 @@
 }
 .remind{
     color:red;
+    clear: right;
     li{
         margin-bottom: 10px;
     }
@@ -69,13 +71,42 @@
         margin-right: 5px;
         zoom:1.3;
     }
+
+    &.finaltotal{
+      display: none;
+      table{
+        max-width: 500px;
+        float: right;
+        margin-bottom: 10px;
+        margin-left: 20px;
+      }
+      .ffright{
+        padding-right: 20px;
+        text-align: right;
+      }
+    }
 }
 .rentaltop_gray{
     background-color: #ebebeb;
+}
+span.event_inp{
+  display: inline-block;
+  margin-right: 20px;
 }
 .event_wrap{
     // display: grid;
     // grid-template-columns: 1fr;
 
 @include clearfix;
+}
+
+
+.mdi-library-plus{
+  cursor: pointer;
+}
+.mdi-delete{
+  cursor: pointer;
+}
+.pkitchen{
+  display: none;
 }
