--- a/sass/twtcnangangcss/_food.scss
+++ b/sass/twtcnangangcss/_food.scss
@@ -13,6 +13,7 @@
     // margin-top: 100px;
     width: 30%;
     float: left;
+    min-height:220px;
     margin-right: 2%;
     margin-bottom: 140px;
 }
