motifly test_add en sass

--- a/css/main.css
+++ b/css/main.css
@@ -4694,6 +4694,10 @@ span.event_inp {
   width: 100%;
 }
 
+.pacd_tab_foren {
+  font-size: 1em;
+}
+
 /** background image file **/
 /** benefits background image file **/
 /** vip icon background image file **/
