--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,4 +25,5 @@
 @import "twtcnangangcss/_conference_room.scss";
 @import "twtcnangangcss/_touch_conference_room.scss";
 @import "twtcnangangcss/_transportation.scss";
+@import "twtcnangangcss/_for_en.scss";
 @import "frame/frame.scss";
