--- a/css/main.css
+++ b/css/main.css
@@ -4698,6 +4698,10 @@ span.event_inp {
   font-size: 1em;
 }
 
+.spotList_en li {
+  font-size: 1em;
+}
+
 /** background image file **/
 /** benefits background image file **/
 /** vip icon background image file **/
