--- a/css/main.css
+++ b/css/main.css
@@ -4702,6 +4702,10 @@ span.event_inp {
   font-size: 1em;
 }
 
+.con_title_en {
+  width: 90%;
+}
+
 /** background image file **/
 /** benefits background image file **/
 /** vip icon background image file **/
