--- a/css/main.css
+++ b/css/main.css
@@ -2153,7 +2153,7 @@ html {
   position: relative;
   width: 100%;
   height: 250px;
-  background-image: url("../images/book01.jpg");
+  background-image: url("../images/DM01.png");
   background-size: cover;
   cursor: pointer;
   transition: all 0.6s;
@@ -2169,7 +2169,7 @@ html {
   position: relative;
   width: 100%;
   height: 250px;
-  background-image: url("../images/book02.jpg");
+  background-image: url("../images/DM02.png");
   background-size: cover;
   cursor: pointer;
   transition: all 0.6s;
