--- a/sass/twtcnangangcss/_for_en.scss
+++ b/sass/twtcnangangcss/_for_en.scss
@@ -9,3 +9,15 @@
 .con_title_en{
     width: 90%;
 }
+.vendor_icon_en{
+    text-align: center;
+    width: 50%;
+    float: left;
+    img{
+        width: 100px;
+    }
+}
+.Vendor_box_en{
+    width: 480px;
+    margin: 0 auto;
+}
