--- a/sass/twtcnangangcss/_for_en.scss
+++ b/sass/twtcnangangcss/_for_en.scss
@@ -18,6 +18,17 @@
     }
 }
 .Vendor_box_en{
+    @include clearfix;
     width: 480px;
     margin: 0 auto;
+    a{
+        text-decoration: none;
+        color: #555555;
+        &:hover{
+            text-decoration: none;
+            color: $twt-blue-title;
+            transition: all 0.5s;
+        }
+    }
+
 }
