--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -265,7 +265,11 @@
 
 .fish_side{
     position: fixed;
-    top:0;
-    right:0;
+    bottom:20px;
+    right:20px;
     z-index: 1000;
+    width:150px;
+    img{
+        width: 100%;
+    }
 }
