--- a/css/main.css
+++ b/css/main.css
@@ -4030,9 +4030,13 @@ html {
 
 .fish_side {
   position: fixed;
-  top: 0;
-  right: 0;
+  bottom: 20px;
+  right: 20px;
   z-index: 1000;
+  width: 150px;
+}
+.fish_side img {
+  width: 100%;
 }
 
 @media only screen and (max-width: 1096px) {
