--- a/css/main.css
+++ b/css/main.css
@@ -3015,9 +3015,9 @@ html {
 }
 
 .calen-card-box {
-  width: 29.333%;
+  width: 28.333%;
   margin: 2% 2%;
-  float: left;
+  display: inline-block;
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 50px;
