--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -527,9 +527,10 @@ html {
     }
 }
 .evn_box{
-    width: 29.333%;
+    width: 28.333%;
     margin: 2% 2%;
-    float: left;
+    // float: left;
+    display: inline-block;
     transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
     transition-delay: .1s;
     border-radius: 4px;
