--- a/sass/twtcnangangcss/_food.scss
+++ b/sass/twtcnangangcss/_food.scss
@@ -12,7 +12,8 @@
     border-radius: 20px;
     // margin-top: 100px;
     width: 30%;
-    float: left;
+    // float: left;
+    display: inline-block;
     min-height:220px;
     margin-right: 2%;
     margin-bottom: 140px;
