--- a/sass/twtcnangangcss/_food.scss
+++ b/sass/twtcnangangcss/_food.scss
@@ -17,6 +17,7 @@
     min-height:220px;
     margin-right: 2%;
     margin-bottom: 140px;
+    vertical-align: top;
 }
 .food_list_box{
     box-shadow: inset 0px 0px 50px -100px #ABABAB,0px 0px 24px -4px #a6a6a6;
