--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -210,4 +210,7 @@
     font-size: 1em;
     color:#727272;
     margin-bottom: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
