--- a/css/main.css
+++ b/css/main.css
@@ -777,7 +777,7 @@ html {
   margin-right: -350px;
   width: 500px;
   height: 300px;
-  background-image: url("../images/viewall2.jpg");
+  background-image: url("../images/16_2.JPG");
   background-size: cover;
 }
 .view_vr img {
@@ -811,7 +811,7 @@ html {
 .traffic_bg {
   width: 100%;
   height: 600px;
-  background-image: url("../images/traffic.jpg");
+  background-image: url("../images/15.JPG");
   padding-bottom: 49%;
   background-size: cover;
   position: relative;
