--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -658,7 +658,7 @@ html {
     margin-right: -350px;
     width: 500px;
     height: 300px;
-    background-image: url("../images/viewall2.jpg");
+    background-image: url("../images/16_2.JPG");
     background-size: cover;
     img{
         width: 100%;
@@ -690,7 +690,7 @@ html {
 .traffic_bg{
     width: 100%;
     height: 600px;
-    background-image: url("../images/traffic.jpg");
+    background-image: url("../images/15.JPG");
     padding-bottom: 49%;
     background-size: cover;
     position: relative;
