--- a/sass/twtcnangangcss/_conference_room.scss
+++ b/sass/twtcnangangcss/_conference_room.scss
@@ -108,11 +108,13 @@
     font-size: 2em;
     color: $twt_blue_title;
     font-weight: bolder;
+    float: right;
 }
 .vip_gray{
     font-size: 1.2em;
     font-weight: bolder;
     color:#999999;
+    float: right;
 }
 .vip_strong{
     font-size: 1.2em;
