--- a/css/main.css
+++ b/css/main.css
@@ -4393,12 +4393,14 @@ span.event_inp {
   font-size: 2em;
   color: #2da4c5;
   font-weight: bolder;
+  float: right;
 }
 
 .vip_gray {
   font-size: 1.2em;
   font-weight: bolder;
   color: #999999;
+  float: right;
 }
 
 .vip_strong {
